[gd_scene load_steps=7 format=3 uid="uid://xlb4g66u1fvo"]

[ext_resource type="Script" path="res://Scripts/Mainmenu.gd" id="1_n8egg"]
[ext_resource type="Theme" uid="uid://d2sx8oefda27p" path="res://Assets/MainTheme.tres" id="1_ur10g"]
[ext_resource type="Texture2D" uid="uid://bh561buj3dekf" path="res://Assets/Art/Fish/Squid.png" id="3_2egje"]
[ext_resource type="Material" uid="uid://d35nm4jv353b7" path="res://Assets/Shaders/water.tres" id="4_6xps5"]

[sub_resource type="Gradient" id="Gradient_nr6um"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xmj0o"]
gradient = SubResource("Gradient_nr6um")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ur10g")
script = ExtResource("1_n8egg")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 347.0
theme_override_font_sizes/font_size = 35
text = "Play"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 512.0
offset_right = 320.0
offset_bottom = 603.0
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="Options" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 384.0
offset_right = 320.0
offset_bottom = 475.0
theme_override_font_sizes/font_size = 35
text = "Options"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 100
text = "How To Fish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="About" type="Button" parent="."]
layout_mode = 0
offset_left = 975.0
offset_top = 15.0
offset_right = 1135.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 30
text = "About"

[node name="Fish" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(749, 394)
scale = Vector2(18.8125, 13.75)
texture = ExtResource("3_2egje")

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("4_6xps5")
layout_mode = 0
offset_right = 1154.0
offset_bottom = 646.0
texture = SubResource("GradientTexture1D_xmj0o")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="About" to="." method="_on_about_pressed"]
